--- a/未命名.md
+++ b/未命名.md
@@ -1,27 +1,4 @@
 
-## 一、单位
-
-* 链式法则
-* MKS 单位制，meter  kilogram   second
-* 有效数字  $3.05 \neq 3.0500$，当我写下 3.05 时，意味着实际值介于 3.04 到 3.06 之间；而当我写下 3.0500 时，则代表实际值在 3.0501 到 3.0499 之间。换言之，当你记录一个物理量时，末位数字存在正负一的误差范围。
-* 记住光速 $3.0 \times 10^{8}\, \text{m/s}$，更精确的值为 $2.99792458 \times 10^8 \, \text{m/s}$
-* 在早期，秒是如何定义的？它是根据铯原子发射特定的这么多（9,192,631,770）周期来定义的。
-* 米的定义又是什么？米是光在真空中在这么多秒的时间间隔内所经过的路径的长度。
-* 质量的定义，强调的是质量不等同于重量，当你说某物重一公斤时，你指的是它的质量为一公斤。这与原子数量以及每个原子（包括电子）的质量总和有关，这就是质量。因此，质量是对物体总量的测量，而重量则是对力的测量。
-
-## 二、直线运动
-
-瞬时速度，它等于当时间间隔趋近于零时这个平均速度的极限。
-
-《数学原理》对人类产生了巨大影响，因为它解释了所有行星围绕太阳的公转运动以及月球围绕地球的运动。但为了讨论例如地球绕太阳的运动，他知道必须处理两个球体：一个是巨大的太阳，另一个是较小的地球。
-
-在他最初的计算中，他将太阳视为一个质点，一个较重的点，而将地球视为一个较轻的点，但两者都被简化为点状模型——一个微小质点绕着更重的中心点运转。但问题在于：太阳并非一个点，而是一个球体。因此他必须证明，在万有引力作用下，一大一小两个球体之间的引力作用所产生的运动规律，与将两者视为质点时的运动规律完全一致。
-
-这需要用到积分运算，他花了 20 年（1687 出版）时间才完全确信这是正确的。但非常奇怪的是，当他撰写《自然哲学的数学原理》时，他并没有使用微分运算，也没有使用积分运算。整部《原理》都是用类似于欧几里得几何的语言写成的。
-
-### 匀速和匀加速运动
-
-重要的是搞懂 位移-时间图（抛物线）；速度-时间图（斜线）；加速度-时间图（恒等水平线）
 
 
 ## 三、向量
@@ -88,102 +65,75 @@ $q^{-1} = \frac{1}{a^2+b^2+c^2+d^2}(a-bi-cj-dk)$
 
 匀速圆周运动，培养直觉
 
+超限数的概念。
 
 
-there is no acceleration in the direction of the tangent is because its length is not increasing.
 
-Let's change that a little bit. which Newton realized. So Newton studied how Earth goes around the Sun.
+OK. Today's lecture is cancelled from 4 to 5. But tomorrow afternoon, from 4 to 5, you can come to my office. OK. 
 
-The acceleration is not uniform circular motion. So therefore, when you talk about that, you need an acceleration which both has a tangential component and a component perpendicular to the tangent. What we have done is a geometrical proof.
+Bye-bye.
 
-Now I want to do the same thing, but an algebraic proof of the same. Let's write the coordinates first. Let's assume that it's going through a motion like this.
+(转录由TurboScribe.ai完成。升级到无限以移除此消息。)
 
-Let us define omega. Omega is equal to angular velocity. So it's equal to V over R. Normally, in physics, the speed of the foot is written as omega.
 
-This is x. This is y. So what is x equal to? x is equal to R cosine omega t. y is equal to R sine omega t. Let's calculate the velocity. It's dx dt. Who can differentiate cosine omega t? What's the derivative of cosine x? It's minus sine x. This is not cosine x. It's cosine omega t. So we have to use a chain rule.
+这可以是有无限数量，也可以是没有。每一种情况都会得出不同的数学结论。然而，如果你有巨大的力量，你最终能够挤压它。最终，你可以把所有电子都挤进原子核。但原子核由质子和中子组成。如果你把一个电子挤进去，它就会变成质子、中子和电子。然后电子和质子会结合形成中子。最终，整个原子会变成一个非常小的东西。
 
-If you haven't learned this, you will learn it in a few days. You have to make it an intuition. You don't have to think about it.
+那个微小的东西仅由中子组成。最终，这些中子聚集在一起，形成了一种中子液体。这就是所谓的中子星。中子星密度极高，非常高。例如，一颗典型的中子星半径只有20公里。想象一下，这非常小。地球目前的直径是8000英里。所以这颗中子星是个非常小的东西。如果一个非常小的东西有非常大的质量，它的密度就非常大。
 
-So it's equal to minus omega sine omega t. And what about dy dt? Is it equal to R or what? It's equal to R cosine omega t. Because the derivative of sine is equal to plus cosine. The derivative of cosine is equal to minus sine. Let me differentiate again.
+这颗中子星通常会旋转。它的周期为一秒。它旋转得非常快。这是一件非常有趣的事情。它非常密集，非常小，非常重，而且旋转得非常快。我们可以说周期与欧米伽有关。Ω是角速度。Ω乘以t是一秒内走过的半径。这段时间就是一转内走过的半径。一个周期等于2π。所以我得到了这个公式。我马上告诉你。
 
-d square x dt square is equal to minus R omega square cosine omega t. It's equal to d square y dt square is equal to minus R omega square R sine omega t. But what's the derivative of this? It's equal to... So d square x dt square is equal to minus omega square x d square y dt square is equal to minus omega square y. In other words, d square R dt square is equal to minus omega square R. So this is equal to... Omega square is V square over R square times R. Then you can write it as minus V square over R times R over R. What is R over R? It's the unit vector in the direction of R. What's the derivative of R over R? It's the unit vector in the direction of R. So this means that the acceleration is positive. The direction is positive. Its magnitude is V square over R. This is what we just proved by geometry.
+因此，如果我们想计算速度，速度等于r乘以ω，即r乘以2π除以t。这样你就能算出结果。如果我们代入数值，会得到每秒12米。你也可以计算出加速度。加速度等于v的平方除以r。这个计算结果等于72。这些都是非常简单的练习。接下来，我将讨论相对运动。
 
-Do you like geometry or algebra? The answer is you like both. It's one thing to like both. But as we said last time, each has its own advantages.
+这是一个坐标系。这些铅笔太干了。打火机。嗯？打火机。打火机？好吧。这是一个坐标系A。还有一个坐标系B。然后有一个点P。然后是r、P、A。这个符号，你看这个符号，r的位置，点P的位置，在坐标系A中，它甚至没有表明我在说什么。
 
-In fact, when it comes to complex things, you can like both. But in general, geometry is more intuitive. In addition, everyone who studies physics, theoretical physics, or mathematics has a preference.
+在这种情况下，P。第二个告诉你的是参考。所以它是相对于这个系统的。所以就是这个。这等于这个加这个。所以这等于A相对于B的r加上B相对于P的r。这样写更好。你也可以这样写。重要的是这个和这个匹配，这个和这个匹配，这个和这个匹配，它以P开头，以A结尾。清楚了吗？是的。好的。对。
 
-Some people like geometry more. Some people like algebra more. You can't force it.
+我刚才说的很简单。现在让我们做一些更复杂的事情。一般的平面运动。平面就是平面。P-L-A-N-A-R（平面）源自plane（平面）一词，P-L-A-N-E（平面）。平面即平面。平面就是平面。平面就是平面。中西方的文字有很大的区别。中文力求简洁，因此省略了许多形容词。我刚才说它很平淡。但说到口语表达时，他们更是把一切都简化了。
 
-But people who like geometry should also know how algebra is done and vice versa. I've been talking for a long time. In fact, I think we've been talking for two and a half lectures.
+因此它变成了平面运动。实际上，平面运动就是平面运动。一个普通的平面运动。这是什么意思？我们上次已经学过这个了。如果是匀速圆周运动，我们已经讨论过了。现在我们要讨论的是更一般的运动。它不一定是均匀的，也不一定是圆形的。但它是在一个平面内运动的。例如，这是P点。P点沿着这个方向移动。
 
-There's nothing complicated. It's just that the Uniform Circular Motion is a little bit complicated. It's all very simple.
+它有一个R和一个C。我们必须写出它的坐标。我用极坐标rθ来描述运动。所以它是r cosθ，r sinθ。我本可以写成 r cosθ i 加 r sinθ j，这是我们上次的做法。但为了方便起见，我们将采用一种记法：x坐标在这里，y坐标在这里。现在我要计算它的导数，也就是速度。速度是r对t的导数。所以我要把r乘以cosθ作为导数。r乘以cosθ是两个量的乘积。
 
-What I'm going to talk about is not in the lecture. Because I mentioned it last time. Maybe some people who are interested in this don't quite understand what I'm talking about.
+当我... 顺便说一下，我们会引入一个符号，r点。点等于d/dt。这个约定在物理学中非常常见。大家都用这个点符号表示导数。所以我们现在计算的是r点。r点等于r乘以cosθ点。现在，有没有人知道，如果我手上有两样东西……如果我有一个产品，阿尔法贝塔，它是一个时间导数。这里有一条规则。这条规则非常简单。你必须记住这一点。也就是说，这非常简单。阿尔法点乘以贝塔加上阿尔法乘以贝塔点。
 
-I'll make it a little bit more detailed. I introduce a concept called Transfinite Numbers. It's infinite.
+如果你还没学过这个，很快你就会学到。这很容易证明。但无论如何，记住这一点。那么现在我们来计算这个。r乘以cosθ，它的时间导数将包含两项。首先，我取r点。其次，我对cosθ进行点积运算。第一项是r点乘cosθ。第二项是cosθ的导数。现在我用到的是所谓的链式法则。链式法则是指d余弦θ/dt等于d余弦θ/dθ乘以dθ/dt。而dθ/dt就是θ点。
 
-Usually two things are the same. For example, you say three biscuits are the same as three pens. What does that mean? If you analyze it carefully, it can become one-to-one correspondence.
+这叫做链式法则。它是另一个基本公式。好的。所以第一项是 r 点乘余弦θ。第二项是 r 乘以余弦θ对θ的导数，也就是负正弦θ。所以减去 r 乘以 sinθ 再乘以 θ 点。这只是 x 坐标。仅此部分。y坐标的处理方式相同。它变为r点乘sinθ。加上r sinθ，r cosθ，θ点。
 
-You can arrange three biscuits into a row, and three pens into a row, and match them one by one. What's the advantage of this? Three biscuits can't match four pens. Four pens are more than three biscuits.
+因为sinθ的导数是cosθ。好的。最后，我们需要再次求导。因为没有加速度。所以r双点。这是加速度。现在情况变得复杂了。让我们先来看第一项。这里一共有四项。一期、二期、三期、四期。让我们逐一来看。第一期是r点余弦θ。根据刚才的规则，第一部分是r的二阶导乘以cosθ。第二部分是r的一阶导乘以cosθ的导数，即负r的一阶导乘以sinθ再乘以θ的一阶导。
 
-So we have an intuition. There is a concept that what is the same number, what is the same number, which one is bigger than the other. In the past, everyone just talked about this.
+这是第一项。第二项更为复杂。第二项是r乘以sinθ，再乘以θ点。所以点积中有三项。第一项是r双点乘以sinθ乘以θ点。第二项是负r乘以cosθ乘以θ点。所以这是θ点平方。第三项是负r乘以sinθ乘以θ双点。因此，x坐标加速度中共有五个项。你同意这五个条件吗？然后看看y坐标。还有五个条件：r双点乘以sinθ加上r点乘以cosθ乘以θ点，加上r点乘以sinθ乘以θ点，加上r乘以cosθ乘以θ点平方，加上r乘以cosθ乘以θ双点。
 
-But in the 19th century, some people started to discuss what the Transfinite Numbers were. When you think about it, there are a lot of things you didn't think about when you didn't think about it before. For example, can all the odd numbers match all the even numbers? Of course.
+一、二、三、四、五。同样也有五个项。所以x坐标有五个项，y坐标也有五个项。这看起来非常复杂。但如果你仔细观察，你会发现x有r双点乘以cosθ，y有r双点乘以sinθ。cosθ和sinθ的方向与r的方向相同。因此，我们可以把这两项写在一起。我们引入一个称为r帽的符号。r帽是r方向的单位向量。那么r帽是什么呢？r帽等于cosθ，sinθ。等于r除以r。然后我们引入一个θ帽。
 
-Let's say n matches 2n. On the other side, I arrange n, 1, 2, 3, 4, 5, 6, 7, 8. On the other side, I arrange 2n, 2, 4, 6, 8, etc. Of course, they can match one by one.
+θ帽就是这里的这个点。它指向r的方向。所以r帽指向这个方向。θ帽就是θ。它在θ方向上增加。所以就像这样。这是θ帽。θ帽垂直于r帽。所以θ帽，如果你仔细想想，它是负sinθ，cosθ。如果你仔细想想，你就会知道这是正确的。
 
-So this proves that all the odd numbers are as many as all the even numbers. So when you use the concept of matching one by one to infinite numbers, a phenomenon occurs. Of course, all the even numbers are just half of all the even numbers.
+无论θ有多大，这都是正确的。我在这里写的θ小于90度。如果θ是120度，这仍然是正确的。这就是数学的美妙之处。如果你把方程写对了，一般情况就是正确的。好，我们用这个来看看第二项。这是r点θ点。这是r点θ点。这是负正弦θ，余弦θ。
 
-But they can match one by one. In other words, when you use the concept of infinite numbers, some of them can match all the even numbers. So you can also say that they are as many as all the even numbers.
+这恰好是θ点。所以它是θ帽。于是r点θ点就变成了θ帽。第三项是负的正弦θ。这是……有点不对吗？这是哪里？这是r点乘正弦θ r点。这是r点。这是cosθ。这是r sinθ。这是r点乘cosθ。这是对的。这是r双点。r双点。这应该是一个点。r点乘以sinθ乘以θ点。对。这是 r 点。所以这一项是加上 r 点 θ 点 θ 帽。你必须仔细做这个。
 
-This is a big difference between the concept of infinite numbers and the concept of even numbers. This is a big difference between the concept of infinite numbers This is what the 19th century mathematicians started to think about. The question just now is not detailed enough.
+而我... 作业是一项练习。所以如果我的计算有点小错误，你得自己来。最下面的项目就是这个项目。这个项目是... 这是r余弦... 减去r。这是正确的。这个项目是... 这是正弦。这是减号。所以是负的rθ点平方r帽。最后一项是加rθ双点θ帽。五项。让我看看。这和我昨晚算的一样吗？没错。你得看看这个。
 
-In other words, all the even numbers can match all the even numbers. This is not detailed enough. In fact, all the even numbers or positive numbers Actually, positive numbers can also be taken into consideration.
+最后两项是相同的。所以它变成了r双点加上两倍的r点θ点θ帽减去rθ点平方r帽加上rθ双点θ帽。我非常确定这是r帽。r帽有两个物品。Theta帽有两个物品。所以取出r帽。取出r帽。乘以r双点。r双点减去rθ点平方加上θ帽。θ帽等于2乘以r点乘以θ点加上r乘以θ双点。你没听懂，对吧？这是最后一项了。r加速度有两项。一个分量在r方向，即r帽方向。一个分量在θ帽方向。有两个分量在r方向。
 
-Simply put, all positive fractions can be made into one-one correspondence with all integers, all positive integers. All positive fractions, that is, a over b, a and b are all positive integers. All positive fractions can be made into one-one correspondence with all positive integers.
+这是r的双点减去r乘以θ点的平方。在θ方向上，是两倍的r点乘以θ点加上r乘以θ的双点。这个公式非常重要。为什么它如此重要？牛顿撰写了《自然哲学的数学原理》。他运用了这个公式。正如我之前告诉你的，他发明了微分几何和微积分。显然，他通过微分得到了这个公式，就像我们一样。但在书中，他并没有以这种方式呈现。他通过几何论证来展示，这要困难得多。
 
-Why can I say this? It's very simple. I write all the positive integers, all the positive fractions. This is 1 over 1, 1 over 2, 1 over 3, 1 over 4, 2 over 1, 2 over 2, 2 over 3, 2 over 4, 3 over 1, 3 over 2, 3 over 3, 3 over 4. In this way, we can write an infinite table.
+今天我们不再遵循几何论证。没有必要遵循几何论证。我们遵循刚刚提出的论证。而这个公式，正是从这个公式中，他推导出了关于行星运动的开普勒三大定律。这一成就如此惊人，它催生了现代科学。所以这是一个非常非常重要的公式。我们稍后会再回到这个公式上来。同心求导，从很多方面来说，是非常简单的。
 
-All the positive integers and all the positive fractions can be made into one-one correspondence. In fact, one even number is more than one. How can I correspond all the positive integers? It's very easy.
+只是你需要遵循一些差异化的规则。但我建议你们每个人都仔细过一遍每一个步骤，并理解每一个步骤。不管怎样，这将成为下周的练习之一。别告诉我我是在讨论特例。特例就是匀速圆周运动。匀速圆周运动。匀速圆周运动。R是固定的，所以R点等于零。C点是欧米茄。它等于一个常数。它是一个常数。所以C的双点等于零。那么在这种情况下，R等于什么？R的双点等于R帽。乘以。
 
-I start from here. This is 2. 1, 2, 3, 4. There are many ways. In this way, you can go through the whole infinite table.
+R 点等于零，所以 R 双点等于零。减去 R θ 点平方。所以是负 R ω 平方。R点等于零。θ双点等于零。因此，在这种情况下，没有影响。那么这是什么？这等于R。这是负R。Omega的平方等于V的平方除以R的平方。所以它等于负R帽。乘以V的平方除以R。这就是我们上次得出的结论。
 
-Isn't there one-to-one correspondence? In fact, you can make all the positive integers correspond to all the fractions more than once. In other words, you can make all the integers correspond to all the fractions. So we can say all positive integers are equal to all positive fractions.
+大小等于V的平方除以R。方向为正。这个计算也能让我们认为我们的公式是正确的。好的，有什么问题吗？对于我刚才使用的两个微分公式，当你说阿尔法贝塔的导数等于两项之和时，有多少人没学过这个？有人学过吗？如果学过，请举手。
 
-It's very interesting. Why? If you take all the integers from 0 to 1, there are so many fractions. 1 over 2, 1 over 4. 1 over 2 is equal to 161 divided by 320.
+怎么回事？怎么会有人不知道这个公式？好吧，我假设你们其实都学过。那另一个公式呢？f对x的导数等于f对y的导数乘以dy/dx。有多少人知道这个公式？有多少人不知道？我想可能有些人不太确定自己是否知道这个公式。
 
-It's very close to 1 over 2. You can be very close There are so many fractions. It's dense. If you put 0 and 1 here, all the fractions are dense everywhere.
+好的，如果你不确定，A，你现在知道了这个公式，你已经听说过这个公式了。B，试着复习和学习这个公式。这是两个基本原则。你必须学习它们。如果你对这两条规则中的任何一条都没有直观的理解，你就无法成为一名物理学家。好的，接下来我们将进入第五章。第五章主要讲述牛顿的三大基本定律。
 
-No matter how many integers you take, there are so many fractions. How can they correspond to all the fractions? In other words, when it comes to infinite numbers, how many fractions correspond to It's totally different from common intuition. OK.
+第一定律。第一定律指出，如果没有外力作用于物体，它将保持静止或匀速直线运动状态。没有加速度。为什么这个定律不那么明显呢？因为通常存在摩擦力。所以当某物在桌子上移动，或者你发射一个投影仪时，它最终会停下来。
 
-Let's prove a very simple thing. All real numbers are greater than all real numbers One more point. It's totally different from common intuition.
 
-It's based on the concept of one-to-one correspondence. It's greater than all positive integers. In particular, all irrational numbers are greater than all real numbers.
 
-This proof is very simple and very famous. I don't need to prove all real numbers. I only need to prove all real numbers between 0 and 1. 0 and 1 are less than all real numbers.
-
-But 0 and 1 are greater than all positive integers. This proof is very simple. If it's not true, it means all real numbers between 0 and 1 correspond to all positive integers.
-
-Let me write it down. Otherwise, I can't prove all real numbers between 0 and 1. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. All real numbers between 0 and 1 correspond to 1, 2, 3. This side is integer. This side is real number between 0 and 1. Now I can prove that the list on the right is incomplete.
-
-Why is it incomplete? Let me take the first number. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. The fourth one corresponds to 4. Let me change it. The first one corresponds to 1. The second one corresponds to 2. Now I know the real number between 0 and 1. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. The fourth one corresponds to 4. The fifth one corresponds to 5. The fifth one corresponds to 3. This is a proof.
-
-This kind of proof is often seen So what impression All the real numbers are infinite. But this infinite is less than all the real numbers. All the real numbers This is a complicated concept.
-
-It is not a simple concept. As I said before, all the fractions are everywhere dense. But although it is infinite and if you think too much it is not too much.
-
-It is just as much as all the real numbers. But if you add all the fractions it becomes all the real numbers. It is not the same as before.
-
-So there is a problem. Between the real numbers and the positive integers is there any less than the real numbers? What is less than the real numbers? It cannot correspond to the real numbers but it can correspond to a part of the real numbers. But is there any less than all the integers? This is a very famous problem.
-
-It is called Continuum Hypothesis. Continuum Hypothesis is whether there is an infinite number between all the integers all the integers and all the real numbers. I remember when I was studying at the University of New South Wales I heard about this.
-
-It was a coincidence. So I thought about it but I could not figure it out. Now I think only an expert can figure it out.
-
-This problem was solved by a mathematician called Paul Cohen in the 1960s. He proved that you can assume that there is an infinite number or an infinite number between these two integers. This logical system can develop without any internal contradictions.
-
-But you can also assume that there is none. In other words, Continuum Hypothesis cannot be decided. In the current mathematical logical system it cannot be decided whether there is an infinite number or not.
-
-It can be either there is an infinite number or not. Each of them creates a different mathematical conclusion.
+Because of friction And in early years, people did not understand, did not realize that there is air and the air can cause resistance It was only later that it became understood by physicists Actually it was not Newton who first realized this It was Galileo Galileo was born in 1564 He died in 1642 A very interesting accident is that the year that Galileo died Newton was born And Galileo already realized that without friction without friction of forces a body would keep on moving And this today looks like it's a trivial conclusion but it was not trivial at all at that time But Galileo did not formulate it as a law Newton formulated it as a law So now we universally call it Newton's first law By the way, if you are interested I recommend to you a book published in the last five years called Galileo's Daughter I'm pretty sure the library has a copy of this And I'm pretty sure it has been translated into Chinese Galileo had two daughters He was very close to his first daughter Those daughters became nuns That was very common at that time And the correspondence between his first daughter and he was preserved So a woman author in the United States who was ethnically Italian Her parents were Italian looked through these letters and wrote this book which became a very popular book It's very interesting to read it because you then understand more about the style of life in those days You also understand more Galileo's struggle And you also understand more the relationship between father and daughter At the end of the book there was a great surprise I will not tell you what the surprise is Before that was revealed in the book physicists didn't know about something relating to the end of Galileo's life According to the book there is a discussion about force and net force If there is a force on a body then there is acceleration That will come when we come to the second law But if a body suffers several forces then you first add those forces and that's called the net force So if a body suffers two forces you take the sum, the vector sum of the forces and that is the net force on that body When we talk about the force law and said that when a body doesn't receive force it is a uniform motion, its speed doesn't change This sentence has a premise The premise is that the observer is in an inertial reference system If a person is sitting in the elevator then when he does the measurement in the elevator it doesn't conform to this law So there is a problem How do you know that the experiment you are doing is in an inertial reference system? This problem is half philosophical and half physical I don't think this is something that should be discussed in early physics So I think you should simply think that the attitude in the book is that the definition of the inertial reference system is that Newton's first law is correct This seems to be an argument that goes round and round I have a very complicated question here Don't ask too much The day before yesterday, a classmate came to talk to me I told him I said, in the process of learning don't twist your toes This doesn't mean that you don't understand some things You just think You shouldn't think That's not what I mean If there is something you don't understand you have to think Just like what I said last time If you learn something and you think it's different from your intuition this is the best chance to learn But if you have studied for three days and you haven't figured it out then my advice is there must be something troublesome You'd better not twist your toes again When you have more knowledge sometimes you feel that your original view is not necessary In other words It's good to twist your toes less It's not good to twist your toes all the time Next we will look at the second law The simplest law of the second law is F net It's equal to MA We have discussed M We also know the unit We have discussed A We also know the unit So there is a unit of force It's called Newton Newton's force is equal to one kilogram multiplied by one meter per second squared It's acceleration Plus one kilogram of mass You give it an acceleration It's one meter per second squared The force you need is one Newton When I was a student We did not use this We used the CGS system So it's called a dyne So what is the relationship between a Newton and a dyne? It's like this You write one kilogram divided by gram Because the CGS system uses gram So multiply by gram It's the same as this Then this You write it as one meter Divided by centimeter Multiply by centimeter It's the same as meter Divided by second squared Kilogram divided by gram Of course it's ten to the third square Meter divided by centimeter It's ten to the second square So it becomes gram centimeter Divided by second square This is dyne So it's ten to the fifth square This means that dyne is a very small force This makes sense Because Newton The force that is usually used It's more convenient to use Newton If you use dyne, it becomes a big number Of course it's more inconvenient It's not convenient in everyday life By the way, you do exercise You can use Chinese, you can use English But I think it's good for you If you gradually learn to write your exercises Also in English Because in the future if you write papers I think it would be good If you learn to write papers Research papers also in English But I will accept Han Yun's question in Chinese We know that an 8x Because of the gravity of the earth So it has to fall down Then it has an acceleration This acceleration is downward This magnitude is g So the gravity of the earth So the gravitational force It's equal to its mass times g So any 8x It receives a magnetic field of gravity It's mg g is 9.78 meters per second squared There is a confusion here It's very common It's called the concept of weight The definition of weight is a force Not a mass The definition of weight is a force So a kilogram of thing What is its weight? It's a kilogram times g 9.78 This result is newton So a kilogram of mass Its weight is 9.78 newton But sometimes Mix the weight with the mass For example, you ask someone How much do you weigh? You ask the question Of course his answer should be Force But his answer is I am 50 kilograms Yes, 50 kilograms is a mass So you have to pay attention to this Sometimes force is used Mass is used as a weight unit And weight is used as a mass unit These two are often confused So you have to figure out the difference We say that anything Is always gravitational Gravitational Its gravitational force is force It's mg m is its mass If something is put on the table And it doesn't move Then it has no acceleration Without acceleration, there should be no force But if we say that gravity has a force Why doesn't it move? Then it must be because the table gives it a force So its net force is zero But this net force Is actually two things added up One is mg Up and down It's the gravity of the ground One is the gravity given by the table The gravity of the table is called normal force It's also mg So these two are balanced The net force is zero So it doesn't move Another point is tension If this wood is here This board is here I pull it When I pull it It uses a force This force is called T This is called tension There is a tension on a rope I think everyone is very clear about this concept So after this There must be a third law The third law is that when two things interact The force of A is equal to the force of B Is equal to negative The force of B is equal to the force of A I think you all have learned this And you will understand it in your daily life It's also intuitive So if I look at this now What do I do with my hand? I use a person A person pulls this So this person For this block It has a force like this So the force of the block is like this But at the same time Pull that person over there So the two are opposite to each other This is the third law So the force on each rope It's always two forces One is left to right Pull the right one to the left The other way around is the opposite force We can write this as FAB FAB stands for Arm A by B This is equal to negative FBA Arm B by A Okay, I just talked about these simple items I think you all learned it in high school Now I want you to study I just talked about these things You all wait for a while Study Chapter 5 Review and Summary I just talked about these simple things You all learned it Is there any problem? If there is no problem Let's do two exercises for ourselves Let's say someone is standing in an elevator The elevator is going up There is an acceleration A Let me ask you How much force does the floor of the elevator give to that person? It's very simple Because this person is here He receives two forces One force is MG The other force is the force given by the floor We call it F So what is its net force? It is equal to F minus MG Its F must be bigger than MG If F is smaller than MG It will accelerate downward We now assume that it is upward And this is equal to MA So we know that F is equal to MG plus MA Let me talk about a more complicated one Let's say there is a train There are many boxes in the train Let's say there are four boxes They are placed on a smooth surface Then I pull I use a force to pull Let's say this force is F Let's say each mass is M Now let's talk about the internal force Don't worry about the internal force Let's say there is a block of wood When I pull it There is a force between the front and back of the wood If you cut the wood in half There will be a force in the front and back Those forces are related to the third floor You don't need to worry about them Just like this The first block pulls the second block The second block also pulls the first block These are all internal forces You don't need to worry about them So what do we get in the end? Let's say there is an acceleration A This A is the mass Its mass is 4MA So the force is 4MA Is there any problem with this equation? No problem Then let me ask about the first mass The first one This is the total mass Let's look at the first mass The first block The first block has two forces One is F One is tension The first tension I call it T1 T1 is the second one pulling the first one The tension of this rope is called T1 So F-T1 Is the net force The net force is MA So what is T1? T1-F-MA Is 3MA The same thing with this This is 2MA This is 1MA In fact, if you think about it Let's say it's a very big block If in that block You didn't divide that block like this In fact, when you pull it The first quarter of that block Is pulling the last three So there is also a tension in that block That tension Is the third quarter of the original outer tension But when it's half It's half of that tension Pull it to the last place Its tension becomes smaller So there is also tension in a block In other words If it's not a block It's something that's easy to break If you pull it The broken thing Where does it break first? It must be the thing on the top Why? Because there are a lot of things on the top that need to be pulled back So it's heavier It's heavier, awesome If you think about it carefully In fact, it's all very natural We've been on the course for two weeks There are three possibilities First Everyone is talking to me now A situation of mixing English and Chinese Is it 50%? Or 80%? Or 95%? Raise your hand if you think it's 50% Don't be shy Raise your hand if you think it's 75% Raise your hand if you think it's 95% Raise your hand if you think it's 25% So I think a lot of people don't want to raise their hands But my conclusion is I think everyone can Basically My current mixture Everyone can accept it I hope In future weeks We can even increase the percentage of English in my language The second problem is The speed of our progress now After the first lecture Some people Because I don't usually read the Internet The things on the Internet I think it's all noise But there was a professor Professor Wu Liqi He forwarded some comments on the Internet to me I read it The impression I got was Most people think it's too shallow Do you still think it's too shallow now? If anyone has a strong opinion on this Next Monday From 4 to 5pm Come and talk to me If you don't have a strong opinion This is my solution in the future This is what I told you before Let me remind everyone This is what I said the first time I advise you In order to improve your English Not only your pronunciation Every aspect of your English To read aloud Every day For maybe 3 or 5 minutes Any paragraph of English Open your mouth wide And I guarantee If you do that for a month You would observe yourself That you have greatly improved Okay I think we are going faster Than what I was originally told to Originally I was told that We should finish one and a half chapters Per week Now in two weeks We will finish two and a half chapters I will observe how you are doing From your exercises And adjust the speed If it turns out that many of you Have great problems But besides English At the beginning I think physics According to the book Is quite easy So you should spend more time Improving your English And improving your calculus
 
 (该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
