--- a/基础物理/第 3 章、向量.md
+++ b/基础物理/第 3 章、向量.md
@@ -32,7 +32,9 @@
 ![[311.png|200]]
 **图 3.1.1** (a) 所有三个箭头具有相同的大小和方向，因此表示相同的位移。  (b) 连接这两点的所有三条路径对应于相同的位移向量。
 
-最简单的向量是位移或位置的变化。表示位移的向量称为**位移向量**（类似地，我们有速度向量和加速度向量）。如果粒子通过从 $A$ 移动到 $B$ 改变其位置，如图 3.1.1a 所示，我们说它经历了从 $A$ 到 $B$ 的位移，我们用从 $A$ 指向 $B$ 的箭头表示。箭头在图形上指定了向量。为了区分书中的向量符号，我们用三角形轮廓作为箭头。在图 3.1.1a 中，从 $A$ 到 $B$、从 $A'$ 到 $B'$ 以及从 $A''$ 到 $B''$ 的箭头具有相同的大小和方向。因此，它们指定相同的位移向量，并表示粒子相同的 *位移变化*。如果向量的长度和方向不变，则可以移动向量而不改变其值。
+最简单的向量是位移或位置的变化。表示位移的向量称为**位移向量**（类似地，我们有速度向量和加速度向量）。如果粒子通过从 $A$ 移动到 $B$ 改变其位置，如图 3.1.1a 所示，我们说它经历了从 $A$ 到 $B$ 的位移，我们用从 $A$ 指向 $B$ 的箭头表示。箭头在图形上指定了向量。为了区分书中的向量符号，我们用三角形轮廓作为箭头。
+
+在图 3.1.1a 中，从 $A$ 到 $B$、从 $A'$ 到 $B'$ 以及从 $A''$ 到 $B''$ 的箭头具有相同的大小和方向。因此，它们指定相同的位移向量，并表示粒子相同的 *位移变化*。如果向量的长度和方向不变，则可以移动向量而不改变其值。
 
 位移向量不告诉我们粒子实际采取的路径。例如，在图 3.1.1b 中，连接点 $A$ 和 $B$ 的所有三条路径对应于图 3.1.1a 的相同位移向量。位移向量仅表示运动的整体效果，而不是运动本身。
 
@@ -46,7 +48,7 @@
 在图 3.1.2b 中，我们重新绘制图 3.1.2a 的向量，并按照我们将要使用的方式重新标记它们，即用箭头在斜体符号上方表示，如 $\vec{a}$。如果我们只想表示向量的大小（没有符号或方向的量），我们将使用斜体符号，如 $a$、$b$ 和 $s$。（你可以只使用手写符号。）带有箭头的符号总是意味着向量的两个属性：大小和方向。
 
 我们可以用 *向量方程* 表示图 3.1.2b 中三个向量之间的关系：$$
-\vec{s} = \vec{a} + \vec{b} \tag{3.1.1}$$这表示向量 $\vec{s}$ 是向量 $\vec{a}$ 和 $\vec{b}$ 的向量和。方程 3.1.1 中的符号 $+$ 以及“和”和“加”一词在向量中具有不同于通常代数的意义，因为它们涉及大小和方向。
+\vec{s} = \vec{a} + \vec{b} \tag{3.1.1}$$这表示向量 $\vec{s}$ 是向量 $\vec{a}$ 和 $\vec{b}$ 的向量和。方程 3.1.1 中的符号 $+$ 以及 “sum” 和 “add” 一词在向量中具有不同于通常代数的意义，因为它们涉及大小和方向。
 
 图 3.1.2 提示了几何相加二维向量 $\vec{a}$ 和 $\vec{b}$ 的步骤。（1）在纸上按某个方便的比例绘制向量 $\vec{a}$ 并在适当的角度。（2）以相同的比例绘制向量 $\vec{b}$，其尾部在向量 $\vec{a}$ 的头部，再次在适当的角度。（3）向量和 $\vec{s}$ 是从 $\vec{a}$ 的尾部到 $\vec{b}$ 的头部的向量。
 
@@ -325,7 +327,8 @@ a = \sqrt{a_x^2 + a_y^2} = \sqrt{a'^2_x + a'^2_y} \tag{3.2.8}$$和$$
 向量 $\vec{a}$ 和 $\vec{b}$ 的向量积 $\vec{a} \times \vec{b}$ 产生第三个向量 $\vec{c}$，其大小为：$$
 c = ab \sin \phi \tag{3.3.5}$$其中 $\phi$ 是 $\vec{a}$ 和 $\vec{b}$ 之间较小的夹角。（必须使用较小的角度，因为 $\sin \phi$ 和 $\sin(360^\circ - \phi)$ 在代数符号上不同。）由于符号的关系，$\vec{a} \times \vec{b}$ 也称为叉积，读作“a cross b”。
 
-如果 $\vec{a}$ 和 $\vec{b}$ 平行或反平行，则 $\vec{a} \times \vec{b} = 0$。当 $\vec{a}$ 和 $\vec{b}$ 互相垂直时，$\vec{a} \times \vec{b}$ 的大小最大。
+> [!tip]
+> 如果 $\vec{a}$ 和 $\vec{b}$ 平行或反平行，则 $\vec{a} \times \vec{b} = 0$。$\vec{a} \times \vec{b}$ 的大小可以写成 $|\vec{a} \times \vec{b}|$。当 $\vec{a}$ 和 $\vec{b}$ 互相垂直时，$\vec{a} \times \vec{b}$ 的大小最大。
 
 向量 $\vec{c}$ 的方向垂直于包含 $\vec{a}$ 和 $\vec{b}$ 的平面。图 3.3.2a 显示了如何使用右手法则确定 $\vec{c} = \vec{a} \times \vec{b}$ 的方向。将向量 $\vec{a}$ 和 $\vec{b}$ 尾对尾放置，而不改变其方向，并想象一条垂直于它们相交平面的线。假装将右手放在那条线上，使手指通过它们之间的较小角度将 $\vec{a}$ 扫向 $\vec{b}$。伸出的拇指指向 $\vec{c}$ 的方向。
 
@@ -356,6 +359,8 @@ a_x \hat{i} \times b_y \hat{j} = a_x b_y (\hat{i} \times \hat{j}) = a_x b_y \hat
 > (b) 12 单位，$\vec{C}$ 和 $\vec{D}$ 之间的角为 $90^\circ$。
 
 ![[332.png|500]]**图 3.3.2** 图示了向量积的右手法则。(a) 用右手的手指将向量 $\vec{a}$ 扫向向量 $\vec{b}$。伸出的拇指显示向量 $\vec{c} = \vec{a} \times \vec{b}$ 的方向。(b) 显示 $\vec{b} \times \vec{a}$ 是 $\vec{a} \times \vec{b}$ 的反向。
+
+----------------- page 56 ---------------
 
 > [!example]
 > #### 示例问题 3.3.1 使用点积求两个向量之间的角度
@@ -407,6 +412,8 @@ a_x \hat{i} \times b_y \hat{j} = a_x b_y (\hat{i} \times \hat{j}) = a_x b_y \hat
 > 
 > 一般来说：叉积产生一个垂直向量，两个垂直向量的点积为零，而沿同一轴的两个向量的叉积为零。
 > 
+
+----------------- page 57 ---------------
 
 ## 回顾与总结
 
