--- a/基础物理/第 1 章、测量.md
+++ b/基础物理/第 1 章、测量.md
@@ -74,7 +74,7 @@ $^a$ 加粗的前缀表示最常用的前缀
 1.27 \times 10^9 \text{ watts} = 1.27 \text{ gigawatts} = 1.27 \, \text{GW} \tag{1.1.4}$$或者将某个时间间隔表示为：$$
 2.35 \times 10^{-9} \, \text{s} = 2.35 \, \text{nanoseconds} = 2.35 \, \text{ns}. \tag{1.1.5}$$你可能已经熟悉一些前缀的使用，如毫升（milliliter）、厘米（centimeter）、千克（kilogram）和兆字节（megabyte）。
 
-### 1.1.3 转换单位
+### 1.1.3 单位转换
 
 我们经常需要改变一个物理量的单位表示方法。我们通过一种称为“*链式转换*”的方法来进行。在这种方法中，我们将原始测量值乘以一个**转换因子**（即单位比率，等于 1）。例如，由于 1 分钟和 60 秒是相同的时间间隔，我们有：$$
 \frac{1 \, \text{min}}{60 \, \text{s}} = 1 \quad \text{和} \quad \frac{60 \, \text{s}}{1 \, \text{min}} = 1$$因此，$\frac{1 \, \text{min}}{60 \, \text{s}}$ 和 $\frac{60 \, \text{s}}{1 \, \text{min}}$ 可以作为转换因子。这 *不* 同于写 $\frac{1}{60} = 1$ 或 $60 = 1$，每个 *数字* 及其 *单位* 必须一起处理。
@@ -209,7 +209,9 @@ $^a$ 加粗的前缀表示最常用的前缀
 ![[131.png|200]]
 **图 1.3.1：** 国际 1 千克质量标准，一个铂铱圆柱体，高度和直径均为 3.9 厘米。
 
-质量的国际标准是一个铂铱合金制成的圆柱体（图 1.3.1），保存在巴黎附近的国际计量局，并通过国际协议被赋予 1 千克的质量。精确的副本已被送往其他国家的标准化实验室，其他物体的质量可以通过与副本平衡来确定。表 1.3.1 显示了一些以千克为单位的质量，范围跨越约 83 个数量级。美国的千克标准副本存放在国家标准与技术研究院（NIST）的一个保险库中，每年最多只移出一次，以检查在其他地方使用的复制品。自 1889 年以来，它已被带到法国两次，以与主要标准重新比对。
+质量的国际标准是一个铂铱合金制成的圆柱体（图 1.3.1），保存在巴黎附近的国际计量局，并通过国际协议被赋予 1 千克的质量。精确的副本已被送往其他国家的标准化实验室，其他物体的质量可以通过与副本平衡来确定。表 1.3.1 显示了一些以千克为单位的质量，范围跨越约 83 个数量级。
+
+美国的千克标准副本存放在国家标准与技术研究院（NIST）的一个保险库中，每年最多只移出一次，以检查在其他地方使用的复制品。自 1889 年以来，它已被带到法国两次，以与主要标准重新比对。
 
 **表 1.3.1：** 近似质量
 
@@ -223,9 +225,9 @@ $^a$ 加粗的前缀表示最常用的前缀
 | 小山     | $1 \times 10^{12}$    | 质子    | $2 \times 10^{-27}$ |
 | 远洋客轮   | $7 \times 10^{7}$     | 电子    | $9 \times 10^{-31}$ |
 
-#### 基布尔天平
+#### Kibble 天平
 
-现在采用了一种更精确的测量质量的方法。在基布尔天平中（以其发明者布莱恩·基布尔命名），当重力对标准质量的向下拉力与电流产生的磁场的向上力平衡时，可以测量标准质量。这种技术的精确性来自于电和磁特性可以通过已精确定义或测量的量子力学量来确定。一旦测量出标准质量，它可以被送往其他实验室，在那里可以从中确定其他物体的质量。
+现在采用了一种更精确的测量质量的方法。在基布尔天平中（以其发明者Brian Kibble 命名），当重力对标准质量的向下拉力与电流产生的磁场的向上力平衡时，可以测量标准质量。这种技术的精确性来自于电和磁特性可以通过已精确定义或测量的量子力学量来确定。一旦测量出标准质量，它可以被送往其他实验室，在那里可以从中确定其他物体的质量。
 
 #### 第二质量标准
 
