--- a/基础物理/练习题/第 1 章习题.md
+++ b/基础物理/练习题/第 1 章习题.md
@@ -1,27 +1,8 @@
 
-## 1.1 测量事物，包括长度
-
-#### 问题 9
-
-（M）南极洲大致呈半圆形，半径约为 2000 公里（见图 1.2）。其冰层的平均厚度为 3000 米。南极洲包含多少立方厘米的冰？（忽略地球的曲率。）（见答案）
-
 ## 1.2 时间
 
 *仅问题 19*
 
-#### 问题 10
-（E）直到 1883 年，美国的每个城市和城镇都有自己的本地时间。如今，旅行者只有在时差达到 1 小时时才会调整手表。平均来说，你必须在经度上移动多少度才能使手表调整 1 小时？（提示：地球大约每 24 小时自转 360°。）15（见答案）
-
-#### 问题 11
-（E）在法国大革命后的大约 10 年里，法国政府尝试将时间单位基于十进制：一周由 10 天组成，一天由 10 小时组成，一小时由 100 分钟组成，一分钟由 100 秒组成。求 (a) 法国十进制周与标准周的比率，以及 (b) 法国十进制秒与标准秒的比率。（见答案）
-
-#### 问题 12
-
-（E）记录中生长最快的植物是一株 Hesperoyucca whipplei，它在 14 天内生长了 3.7 米。它的生长速率是多少微米每秒？
-
-#### 问题 13
-
-（E）三台数字时钟 A、B 和 C 的运行速度不同，并且没有同时显示为零。图 1.3 展示了四个场合下这三台时钟成对的同时读数。（例如，在最早的场合，B 显示 25.0 秒，C 显示 92.0 秒。）如果在时钟 A 上两个事件相隔 600 秒，它们在 (a) 时钟 B 上相隔多长时间？(b) 时钟 C 上相隔多长时间？(c) 当时钟 A 显示 400 秒时，时钟 B 显示多少？(d) 当时钟 C 显示 15.0 秒时，时钟 B 显示多少？（假设零点之前的时间为负数。）（见答案）
 
 #### 问题 14
 
@@ -242,3 +223,17 @@
 #### 问题 58
 
 在儒勒·凡尔纳的经典科幻小说《海底两万里》中（1869年至1870年连载出版），尼摩船长驾驶他的潜艇“鹦鹉螺号”在世界的海洋中航行了两万里程，其中一个（公制）里程等于4.000公里。假设地球是一个半径为6378公里的球体。尼摩船长可以绕地球航行多少圈？
+
+#### 问题 59
+
+海里（sea mile）。海里是一种常用于航海中的距离单位，但与海里（nautical mile）不同，它没有固定的值，因为它取决于测量时的纬度。海里是沿某一经线测量的距离，该距离从地球中心测量时对应1弧分（图1.5）。这个距离取决于地球在该点的半径，但由于地球不是一个完美的球体，在赤道处较宽，两极稍微扁平，因此半径取决于纬度。在赤道，半径为6378公里；在极地，半径为6356公里。测量在赤道和极地的海里之间的差异是多少？
+
+#### 问题 60
+
+夜光云。在1883年克拉卡托火山（位于爪哇附近的东南太平洋）剧烈爆发后不久，北半球的夜空中开始出现银蓝色的云。这次爆发非常猛烈，将灰尘抛入中间层——大气层中位于平流层之上的一个较冷区域。在那里，水分在灰尘上凝结并冻结，形成了这些云的颗粒。这些云被称为夜光云（“夜间发光”），如今频繁出现（如图1.6a所示），这标志着地球大气的重大变化，不是因为火山爆发，而是由于工业、稻田、垃圾填埋场和牲畜排放的甲烷增加。
+
+这些云在日落后可见，因为它们位于大气层的上部，仍然被阳光照亮。图1.6b显示了观察者在点A处看到云层在日落后38分钟出现在头顶的情况。两条光线在A和B处与地球表面相切，距离地心的半径为r。地球在这两条光线之间旋转了角度θ。云的高度H是多少？
+
+#### 问题 61
+
+上课时间，漫长的过程。对于一个普通的四年制本科课程，总共需要在课堂上花费多少 (a) 小时和 (b) 秒？请用科学计数法输入你的答案。
